Fix z-index for intro background
The backgorund image was overlaying the text. Giving it a z-index of -1
fixed that.

--- a/_sass/blocks/_intro_section.sass
+++ b/_sass/blocks/_intro_section.sass
@@ -9,6 +9,7 @@
     border-radius: 50%
     background-color: $accent-color
     opacity: .2
+    z-index: -1
 
   &:before
     left: -80px
